extract logic to Environment and new RenderPipeline